project/instance.tf
data "aws_ami" "amazon" {
  most_recent = true
  owners      = ["137112412989"]

  filter {
    name   = "state"
    values = ["available"]
  }

}
resource "aws_instance" "r1soft"         {
  instance_type               = "t2.micro"
  ami                         = "${data.aws_ami.amazon.id}"
  key_name                    = "${aws_key_pair.deployer.key_name}"
  associate_public_ip_address = "true"
  subnet_id                   = "${aws_subnet.public_subnet1.id}"
  vpc_security_group_ids      = ["${aws_security_group.allow_tls.id}"]
  provisioner   "remote-exec" {
    connection {
        host        = "${aws_instance.r1soft.public_ip}"
        type        = "ssh"
        user        = "ec2-user"
        private_key = "${file("~/.ssh/id_rsa")}"
    }
    source      = "./project/r1soft.repo"
    destination = "/tmp/r1soft.repo"
  },
  provisioner   "remote-exec" {
    connection {
        host        = "${aws_instance.r1soft.public_ip}"
        type        = "ssh"
        user        = "ec2-user"
        private_key = "${file("~/.ssh/id_rsa")}"
    }
    inline = [
      "sudo yum install r1soft-cdp-enterprise-server -y",
      "sudo /etc/init.d/cdp-agent restart",
      "sudo r1soft-setup --user admin --pass redhat --http-port 8080"
    ]
   }
}
  resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = "${file("~/.ssh/id_rsa.pub")}"
}
resource "aws_security_group" "allow_tls" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.project.id}"

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 ingress {
    description = "TLS from VPC"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
